Fixing scrolls (#67)
* Fix's
- Added scrollbar to sidebar when it overflows
- Clarified Private Materials are not able to be published and this is intentional
- Expanded Number of Modules on a Page (there is probs a better way to do do this and make it more dynamic but we don't have time)

* Fixed settings button being broken on settings page: due to declaring variable of the same names

--- a/static/accounts/css/settings.css
+++ b/static/accounts/css/settings.css
@@ -1,9 +1,9 @@
-.settings {
+.settings-page {
   height: max(100%,100vh);
   margin: 0;
   display: flex;
-  justify-content: center; /* horizontal */
-  align-items: center;     /* vertical */
+  justify-content: center;
+  align-items: center;
 }
 
 .settings-title {
